--- a/rover-client/src/main/resources/application.yml
+++ b/rover-client/src/main/resources/application.yml
@@ -4,4 +4,5 @@ spring:
 
 roverclient:
   serverUrl: "http://localhost:8080"
-  commandApiEndpoint: "/command"
+  maneuverApi: "/maneuver"
+  positionApi: "/position"
